--- a/index.html
+++ b/index.html
@@ -1,86 +1,86 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Место</title>
-    <link rel="stylesheet" type="text/css" href="./page/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Место</title>
+  <link rel="stylesheet" type="text/css" href="./page/index.css">
 </head>
 <body class="page">
-    <header class="header">
-        <img src="./images/header__logo.svg" class="header__logo" alt="Логотип">
-    </header>
-    <main class="content">
-        <section class="profile">
-            <img src="./images/avatar.svg" class="profile__avatar" alt="Аватар">
-            <div class="profile__info">
-                <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button type="button" class="profile__info-editButton"></button>
-                <p class="profile__subtitle">Исследователь океана</p>
-            </div>
-            <button type="button" class="profile__addButton"></button>
-        </section>
-        <section class="elements">
-            <ul class="elements__list">
-            <li class="element">
-                <img src="./images/Карачаевск.jpg" class="element__image" alt="Карачаевск">
-                <div class="element__description">
-                  <h2 class="element__title">Карачаевск</h2>
-                  <img src="./images/like.svg" class="element__like" alt="Лайк">
-                </div>
-            </li>
-            <li class="element">
-                <img src="./images/Эльбрус.jpg" class="element__image" alt="Эльбрус">
-                <div class="element__description">
-                  <h2 class="element__title">Гора Эльбрус</h2>
-                  <img src="./images/like.svg" class="element__like" alt="Лайк">
-                </div>
-            </li>
-            <li class="element">
-                <img src="./images/Домбай.jpg" class="element__image" alt="Домбай">
-                <div class="element__description">
-                  <h2 class="element__title">Домбай</h2>
-                  <img src="./images/like.svg" class="element__like" alt="Лайк">
-                </div>
-            </li>
-            <li class="element">
-                <img src="./images/Байкал.jpg" class="element__image" alt="Байкал">
-                <div class="element__description">
-                  <h2 class="element__title">Байкал</h2>
-                  <img src="./images/like.svg" class="element__like" alt="Лайк">
-                </div>
-            </li>
-            <li class="element">
-                <img src="./images/Карелия.jpg" class="element__image" alt="Карелия">
-                <div class="element__description">
-                  <h2 class="element__title">Карелия</h2>
-                  <img src="./images/like.svg" class="element__like" alt="Лайк">
-                </div>
-            </li>
-            <li class="element">
-                <img src="./images/Карачаевск.jpg" class="element__image" alt="Карачаево-Черкессия">
-                <div class="element__description">
-                  <h2 class="element__title">Карачаево-Черкессия</h2>
-                  <img src="./images/like.svg" class="element__like" alt="Лайк">
-                </div>
-            </li>
-        </ul>
-        </section>
-        <section class="popup">
-            <div class="popup__container">
-              <h2 class="popup__title">Редактировать профиль</h2>
-              <button type="button" class="popup__close"></button>
-                <form class="popup__form">
-                  <input type="text" class="popup__input popup__input_username" name="username" required>
-                  <input type="text" class="popup__input popup__input_job" name="job" required>
-                  <button type="submit" class="popup__button-save">Сохранить</button>
-                </form>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-      <p class="footer__copyright">© 2022 Mesto Russia</p>
-    </footer>
-    <script src="./scripts/index.js"></script>
+  <header class="header">
+    <img src="./images/header__logo.svg" class="header__logo" alt="Логотип">
+  </header>
+  <main class="content">
+    <section class="profile">
+      <img src="./images/avatar.svg" class="profile__avatar" alt="Аватар">
+      <div class="profile__info">
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <button type="button" class="profile__info-edit-button" aria-label="Редактировать профиль"></button>
+        <p class="profile__subtitle">Исследователь океана</p>
+      </div>
+      <button type="button" class="profile__add-button" aria-label="Добавить новые фото"></button>
+    </section>
+    <section class="elements">
+      <ul class="elements__list">
+        <li class="element">
+          <img src="./images/Карачаевск.jpg" class="element__image" alt="Карачаевск">
+          <div class="element__description">
+            <h2 class="element__title">Карачаевск</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="./images/Эльбрус.jpg" class="element__image" alt="Эльбрус">
+          <div class="element__description">
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="./images/Домбай.jpg" class="element__image" alt="Домбай">
+          <div class="element__description">
+            <h2 class="element__title">Домбай</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="./images/Байкал.jpg" class="element__image" alt="Байкал">
+          <div class="element__description">
+            <h2 class="element__title">Байкал</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="./images/Карелия.jpg" class="element__image" alt="Карелия">
+          <div class="element__description">
+            <h2 class="element__title">Карелия</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img src="./images/Карачаевск.jpg" class="element__image" alt="Карачаево-Черкессия">
+          <div class="element__description">
+            <h2 class="element__title">Карачаево-Черкессия</h2>
+            <button type="button" class="element__like" aria-label="Лайк"></button>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="footer">
+    <p class="footer__copyright">© 2022 Mesto Russia</p>
+  </footer>
+  <div class="popup">
+    <div class="popup__container">
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <button type="button" class="popup__close" aria-label="Зыкрыть форму"></button>
+      <form class="popup__form" name="Редактирование профиля" action="#" method="post">
+        <input type="text" class="popup__form-input popup__form-input_username" name="username" required>
+        <input type="text" class="popup__form-input popup__form-input_job" name="job" required>
+        <button type="submit" class="popup__button-save" aria-label="Сохранение данных">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
