--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <button type="button" class="popup__close" aria-label="Зыкрыть форму"></button>
-      <form class="popup__form" name="Редактирование профиля" action="#" method="post">
-        <input type="text" class="popup__form-input popup__form-input_username" name="username" required>
-        <input type="text" class="popup__form-input popup__form-input_job" name="job" required>
+      <form class="popup__form" name="edit profile" action="#" method="post">
+        <input type="text" class="popup__form-input popup__form-input_field_name" name="username" required>
+        <input type="text" class="popup__form-input popup__form-input_field_job" name="job" required>
         <button type="submit" class="popup__button-save" aria-label="Сохранение данных">Сохранить</button>
       </form>
     </div>
