--- a/index.html
+++ b/index.html
@@ -21,50 +21,7 @@
       <button type="button" class="profile__add-button" aria-label="Добавить новые фото"></button>
     </section>
     <section class="elements">
-      <ul class="elements__list">
-        <li class="element">
-          <img src="./images/Карачаевск.jpg" class="element__image" alt="Карачаевск">
-          <div class="element__description">
-            <h2 class="element__title">Карачаевск</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/Эльбрус.jpg" class="element__image" alt="Эльбрус">
-          <div class="element__description">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/Домбай.jpg" class="element__image" alt="Домбай">
-          <div class="element__description">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/Байкал.jpg" class="element__image" alt="Байкал">
-          <div class="element__description">
-            <h2 class="element__title">Байкал</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/Карелия.jpg" class="element__image" alt="Карелия">
-          <div class="element__description">
-            <h2 class="element__title">Карелия</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img src="./images/Карачаевск.jpg" class="element__image" alt="Карачаево-Черкессия">
-          <div class="element__description">
-            <h2 class="element__title">Карачаево-Черкессия</h2>
-            <button type="button" class="element__like" aria-label="Лайк"></button>
-          </div>
-        </li>
-      </ul>
+      <ul class="elements__list"></ul>
     </section>
   </main>
   <footer class="footer">
@@ -81,6 +38,36 @@
       </form>
     </div>
   </div>
+  <div class="popup-photo">
+    <div class="popup-photo__container">
+      <h2 class="popup-photo__title">Новое место</h2>
+      <button type="button" class="popup-photo__close" aria-label="Зыкрыть форму"></button>
+      <form class="popup-photo__form" name="add photo" action="#" method="post">
+        <input type="text" class="popup-photo__form-input popup-photo__form-input_card_name" name="name" placeholder="Название" required>
+        <input type="text" class="popup-photo__form-input popup-photo__form-input_card_link" name="link" placeholder="Ссылка на картинку" required>
+        <button type="submit" class="popup-photo__button-save" aria-label="Сохранение данных">Создать</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup-image">
+    <div class="popup-image__container">
+      <button type="button" class="popup-image__close" aria-label="Зыкрыть форму"></button>
+      <img src="" alt="" class="popup-image__photo">
+      <h2 class="popup-image__title"></h2>
+    </div>
+  </div>
+  <template id="element-template">
+    <li class="element">
+      <button type="button" class="element__del" aria-label="Удалить"></button>
+      <button type="button" class="element__button-image" aria-label="Увеличить картинку">
+        <img src="" alt="" class="element__image">
+      </button>
+      <div class="element__description">
+        <h2 class="element__title"></h2>
+        <button type="button" class="element__like" aria-label="Лайк"></button>
+      </div>
+    </li>
+  </template>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
