--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="popup-image">
     <div class="popup-image__container">
       <button type="button" class="popup-image__close" aria-label="Зыкрыть форму"></button>
-      <img src="" alt="" class="popup-image__photo">
+      <img src="#" alt="#" class="popup-image__photo">
       <h2 class="popup-image__title"></h2>
     </div>
   </div>
