--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <li class="element">
       <button type="button" class="element__del" aria-label="Удалить"></button>
       <button type="button" class="element__button-image" aria-label="Увеличить картинку">
-        <img src="" alt="" class="element__image">
+        <img src="#" alt="#" class="element__image">
       </button>
       <div class="element__description">
         <h2 class="element__title"></h2>
