--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/volidate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
