--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <main class="content">
     <section class="profile">
       <button type="button" class="profile__edit-avatar-button" aria-label="Редактировать аватар">
-        <img src="" class="profile__avatar" alt="Аватар">
+        <img src="#" class="profile__avatar" alt="Аватар">
       </button>
       <div class="profile__info">
         <h1 class="profile__title"></h1>
