--- a/src/index.html
+++ b/src/index.html
@@ -31,32 +31,32 @@
     <p class="footer__copyright">© 2022 Mesto Russia</p>
   </footer>
   <div class="popup profile-popup">
-    <div class="profile-popup__container">
-      <h2 class="profile-popup__title">Редактировать профиль</h2>
-      <button type="button" class="popup__close profile-popup__close" aria-label="Зыкрыть форму"></button>
-      <form class="popup__form profile-popup__form" name="edit profile" action="#" method="post" novalidate>
+    <div class="popup__container">
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <button type="button" class="popup__close" aria-label="Зыкрыть форму"></button>
+      <form class="popup__form" name="edit profile" action="#" method="post" novalidate>
         <input id="input-username" required type="text" minlength="2" maxlength="40" name="username"
-          class="popup__input profile-popup__form-input profile-popup__form-input_field_name">
-        <span id="input-username-error" class="error"></span>
+          class="popup__input popup__input_field_name">
+        <span id="input-username-error" class="popup__input-error"></span>
         <input id="input-job" required type="text" minlength="2" maxlength="200" name="job"
-          class="popup__input profile-popup__form-input profile-popup__form-input_field_job">
-        <span id="input-job-error" class="error"></span>
+          class="popup__input popup__input_field_job">
+        <span id="input-job-error" class="popup__input-error"></span>
         <button type="submit" class="popup__button-save profile-popup__button-save"
           aria-label="Сохранение данных">Сохранить</button>
       </form>
     </div>
   </div>
   <div class="popup card-popup">
-    <div class="card-popup__container">
-      <h2 class="card-popup__title">Новое место</h2>
-      <button type="button" class="popup__close card-popup__close" aria-label="Зыкрыть форму"></button>
-      <form class="popup__form card-popup__form" name="add photo" action="#" method="post" novalidate>
+    <div class="popup__container">
+      <h2 class="popup__title">Новое место</h2>
+      <button type="button" class="popup__close" aria-label="Зыкрыть форму"></button>
+      <form class="popup__form" name="add photo" action="#" method="post" novalidate>
         <input id="input-name" required type="text" minlength="2" maxlength="30" name="name"
-          class="popup__input card-popup__form-input card-popup__form-input_card_name" placeholder="Название">
-        <span id="input-name-error" class="error"></span>
+          class="popup__input popup__input_card_name" placeholder="Название">
+        <span id="input-name-error" class="popup__input-error"></span>
         <input id="input-link" required type="url" name="link"
-          class="popup__input card-popup__form-input card-popup__form-input_card_link" placeholder="Ссылка на картинку">
-        <span id="input-link-error" class="error"></span>
+          class="popup__input popup__input_card_link" placeholder="Ссылка на картинку">
+        <span id="input-link-error" class="popup__input-error"></span>
         <button type="submit" class="popup__button-save card-popup__button-save"
           aria-label="Сохранение данных">Создать</button>
       </form>
@@ -64,29 +64,29 @@
   </div>
   <div class="popup image-popup">
     <div class="image-popup__container">
-      <button type="button" class="popup__close image-popup__close" aria-label="Зыкрыть форму"></button>
+      <button type="button" class="popup__close" aria-label="Зыкрыть форму"></button>
       <img src="#" alt="#" class="image-popup__photo">
       <h2 class="image-popup__title"></h2>
     </div>
   </div>
   <div class="popup avatar-popup">
-    <div class="avatar-popup__container">
-      <h2 class="avatar-popup__title">Обновить аватар</h2>
-      <button type="button" class="popup__close avatar-popup__close" aria-label="Зыкрыть форму"></button>
-      <form class="popup__form avatar-popup__form" name="new avatar" action="#" method="post" novalidate>
-        <input id="input-avatar" required type="url" name="avatar" class="popup__input avatar-popup__form-input"
+    <div class="popup__container">
+      <h2 class="popup__title">Обновить аватар</h2>
+      <button type="button" class="popup__close" aria-label="Зыкрыть форму"></button>
+      <form class="popup__form" name="new avatar" action="#" method="post" novalidate>
+        <input id="input-avatar" required type="url" name="avatar" class="popup__input popup__input_avatar_link"
           placeholder="Ссылка на картинку">
-        <span id="input-avatar-error" class="error"></span>
+        <span id="input-avatar-error" class="popup__input-error"></span>
         <button type="submit" class="popup__button-save avatar-popup__button-save"
           aria-label="Сохранение данных">Сохранить</button>
       </form>
     </div>
   </div>
   <div class="popup delete-popup">
-    <div class="delete-popup__container">
-      <h2 class="delete-popup__title">Вы уверены?</h2>
-      <button type="button" class="popup__close delete-popup__close" aria-label="Зыкрыть форму"></button>
-      <button type="submit" class="popup__button-save delete-popup__button-save"
+    <div class="popup__container">
+      <h2 class="popup__title">Вы уверены?</h2>
+      <button type="button" class="popup__close" aria-label="Зыкрыть форму"></button>
+      <button type="submit" class="popup__button-save popup__button-save-delete"
         aria-label="Удаление данных">Да</button>
     </div>
   </div>
