--- a/src/index.html
+++ b/src/index.html
@@ -62,11 +62,11 @@
       </form>
     </div>
   </div>
-  <div class="popup image-popup">
-    <div class="image-popup__container">
+  <div class="popup popup_image-open image-popup">
+    <div class="popup__container popup__container_image-popup ">
       <button type="button" class="popup__close" aria-label="Зыкрыть форму"></button>
-      <img src="#" alt="#" class="image-popup__photo">
-      <h2 class="image-popup__title"></h2>
+      <img src="#" alt="#" class="popup__photo-image">
+      <h2 class="popup__title-image"></h2>
     </div>
   </div>
   <div class="popup avatar-popup">
